--- a/src/index.pug
+++ b/src/index.pug
@@ -1,15 +1,135 @@
+extends ./main.layout.pug
 include ./mixins.pug
 
-<!DOCTYPE html>
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Portfolio | main page
-  body
-    .wrapper
-      .maincontent
-        +image('content/user.jpg', 'user-pic')
-        +icon('link', 'link-class')
-        .icon-bg
+block content 
+  .welcome-section
+    section.hero
+      .container.hero__container
+        header.header
+          a.logo(href='#') ФР
+          nav.menu
+            - var menuItems = ['Обо мне', 'Навыки', 'Работы', 'Отзывы']
+            ul.menu__list
+              each item in menuItems 
+                li.menu__item
+                  a(href='#').menu__link #{item}
+          
+          - var socials = [['insta'], ['github'], ['vk'], ['envelope']]
+          ul.socials
+            each item in socials 
+              li.socials__item
+                a(href='').socials__link
+                  +icon(item, 'socials__icon')
+
+        .hero__center-content
+          .userinfo 
+            .userinfo__title Личный сайт#[br]веб разработчика
+            h1.userinfo__name Фанис Рахматуллин
+
+        .hero__bottom-buttons
+          button.scroll-down-btn Скролл
+    section.about
+      .container.about__container
+        .about__user
+          .user
+            .user__avatar
+              .user__avatar-style
+                +image('content/user.jpg', 'user__avatar-pic')
+            
+            -
+              var userInfo = [
+                ['Проживаю','Москва'],
+                ['Возраст','24 года'],
+                ['Родился','13 ноября 1995']
+              ];
+
+            table.user__data
+              each item in userInfo 
+                tr.user__data-row
+                  td.user__data-title #{item[0]}
+                  td.user__data-content #{item[1]}
+        .about__content
+          .about__desc Привет, меня зовут
+          h2.about__title Рахматуллин Фанис
+          .about__text-info 
+            p Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+          .about__ps 
+            p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+  .middle-section
+    .triangles.middle-section__triangles-top
+      svg(viewBox='0 0 1000 100' preserveAspectRatio='none').triangles__shape.triangles__shape--position--left
+        polygon(points='0,0 0,100 1000,100')
+      svg(viewBox='0 0 1000 100' preserveAspectRatio='none').triangles__shape.triangles__shape--position--right
+        polygon(points='0,100 1000,100 1000,0')
+    section.values
+      .container.values__container
+        .values__title
+          h2.values__title-text Чем я могу быть полезен вам
+          .values__content 
+            p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+        .values__widget
+
+          -
+            var skillsCategories = [
+              ["Front-end", ["HTML",'CSS','JavaScript','jQuery и Vue.js']],
+              ['Workflow', ['Git','Terminal','Gulp','Webpack']]
+            ]
+
+          ul.skills
+            each category in skillsCategories 
+              li.skills__item
+                .skills-row
+                  h4.skills-row__title #{category[0]}
+                  ul.skills-row__list
+                    each skill in category[1]
+                      li.skills-row__item
+                        .skill
+                          svg(viewBox='0 0 100 100').skill__circle-shape
+                            circle(cx='50' cy='50' r='45').skill__circle.skill__circle--layer--under
+                            circle(cx='50' cy='50' r='45' stroke='url(#gradient)' transform='rotate(180 50 50)').skill__circle.skill__circle--layer--above
+                            linearGradient(id='gradient' x1='0%' y1='0%' x2='100%' y2='0%')
+                              stop(offset='0%' stop-color='#7C00EA')
+                              stop(offset='100%' stop-color='#4A00ED')
+                          .skill__title #{skill}
+    section.works
+      .container
+        h2.section-title Мои работы
+        .works__content
+          .works-preview
+            .works-preview__pictures
+              +image('content/slider-1.jpg', 'works-preview__img')
+              .works-preview__thumbs
+                ul.thumbs
+                  - for (var i = 3; i > 0; i--)
+                    li.thumbs__item
+                      a(href='#').thumbs__link
+                        +image(`content/slider-${i}.jpg`, 'thumb')
+              .works-preview__btns
+                .square-btns
+                  button(type='button').square-btns__item.square-btns__item--next
+                  button(type='button').square-btns__item.square-btns__item--prev
+
+            .works-preview__info
+              - var tags = ['HTML', 'CSS', 'JavaScript']
+              ul.tags.works-preview__tags
+                each item in tags 
+                  li.tags__item
+                    .tag #{item}
+              
+              .works-preview__title Сайт школы образования
+              .works-preview__desc 
+                p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+              a(href='#').iconed-link Посмотреть сайт
+
+
+
+
+
+
+
+    .triangles.middle-section__triangles-bottom.triangles--pointed-down
+      svg(viewBox='0 0 1000 100' preserveAspectRatio='none').triangles__shape.triangles__shape--position--left
+        polygon(points='0,0 0,100 1000,100')
+      svg(viewBox='0 0 1000 100' preserveAspectRatio='none').triangles__shape.triangles__shape--position--right
+        polygon(points='0,100 1000,100 1000,0')
+  .block(style="background: #000; height: 1000px")
