--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -28,19 +28,19 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 1480px;
-  width: 95%;
-  // width: 1490px;
+  /* max-width: 1480px;
+  width: 95%; */
+  width: 1080px;
 
-  @include phones {
+  /* @include phones {
     width: 85%;
-  }
+  } */
 }
 
-.fullscreen-section {
+/* .fullscreen-section {
   height: 100vh;
   min-height: 650px;
-}
+} */
 
 button {
   border: 0;
