--- a/src/index.pug
+++ b/src/index.pug
@@ -96,7 +96,7 @@ block content
         h2.section-title Мои работы
         .works__content
           .works-preview
-            .works-preview__pictures
+            .works-preview__pictures(data-slide='2')
               +image('content/slider-1.jpg', 'works-preview__img')
               .works-preview__thumbs
                 ul.thumbs
