--- a/src/styles/blocks/works-preview.pcss
+++ b/src/styles/blocks/works-preview.pcss
@@ -3,12 +3,50 @@
   justify-content: space-between;
 }
 
+.works-preview__pictures {
+  width: 59%;
+  position: relative;
+  height: 360px;
+
+  &::before {
+    position: absolute;
+    content: attr(data-slide);
+    font-weight: 800;
+    font-size: 300px;
+    line-height: 1;
+    color: #E6E6E6;
+    top: 14%;
+    right: 0;
+    transform: translateX(75%);
+    z-index: -1;
+  }
+}
+
+.works-preview__thumbs {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 116px;
+}
+
+.works-preview__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.works-preview__btns {
+  position: absolute;
+  top: 100%;
+  right: 0;
+}
+
 .works-preview__info {
   width: 28%;
 }
 
 .works-preview__tags {
-  margin-bottom: 35px;
+  margin-bottom: 25px;
 }
 
 .works-preview__title {
@@ -21,7 +59,7 @@
   font-weight: 600;
   line-height: 1.85;
   color: rgba($text-color, 0.8);
-  margin-bottom: 45px;
+  margin-bottom: 48px;
 }
 
 
