--- a/src/index.pug
+++ b/src/index.pug
@@ -93,7 +93,7 @@ block content
                           .skill__title #{skill}
     section.works
       .container
-        h2.section-title Мои работы
+        h2.section-title.works__title Мои работы
         .works__content
           .works-preview
             .works-preview__pictures(data-slide='2')
@@ -120,16 +120,66 @@ block content
               .works-preview__desc 
                 p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
               a(href='#').iconed-link Посмотреть сайт
-
-
-
-
-
-
-
     .triangles.middle-section__triangles-bottom.triangles--pointed-down
       svg(viewBox='0 0 1000 100' preserveAspectRatio='none').triangles__shape.triangles__shape--position--left
         polygon(points='0,0 0,100 1000,100')
       svg(viewBox='0 0 1000 100' preserveAspectRatio='none').triangles__shape.triangles__shape--position--right
         polygon(points='0,100 1000,100 1000,0')
-  .block(style="background: #000; height: 1000px")
+  section.reviews
+    .container.reviews__container
+      .slider
+        .slider__header
+          .section-title Что обо мне говорят
+          .slider__btns
+            button(type='button').round-btn.round-btn--pointer--left
+            button(type='button').round-btn.round-btn--pointer--right
+        ul.slider__content
+          li.slider__item
+            .quote
+              .quote__text
+                p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
+              .quote__user
+                .user-display
+                  .user-display__avatar
+                    .user-display__avatar-style
+                      +image('content/review-2.jpg', 'user-display__pic')
+                  .user-display__data
+                    .user-display__name Ковальчук Дмитрий
+                    .user-display__occ Основатель Loftschool
+          li.slider__item
+            .quote
+              .quote__text
+                p Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах
+              .quote__user
+                .user-display
+                  .user-display__avatar
+                    .user-display__avatar-style
+                      +image('content/review-1.jpg', 'user-display__pic')
+                  .user-display__data
+                    .user-display__name Владимир Сабанцев
+                    .user-display__occ Преподаватель
+  footer.footer
+    .container.footer__container
+      .footer__copyright
+        .footer__copyright-year &copy; 2020
+        .footer__copyright-name Фанис Рахматуллин
+        .footer__copyright-text Личный сайт веб - разработчика
+      .footer__data  
+        .footer__menu
+          nav.menu.menu--color--white.footer__menu-elem
+            ul.menu__list
+              each item in menuItems 
+                li.menu__item
+                  a(href='#').menu__link #{item}
+        .footer__content
+          .footer__content-info
+            .footer__content-text Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
+            .footer__socials
+              ul.socials.socials--round
+                each item in socials 
+                  li.socials__item
+                    a(href='').socials__link
+                      +icon(item, 'socials__icon')
+          .text-quote.footer__content-quote
+              .text-quote__text Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
+              .text-quote__author Martin Golding
