--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -1,5 +1,32 @@
 .socials {
   display: flex;
+
+  &--round {
+    .socials__item {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      border: 1px solid currentColor;
+      margin-right: 20px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+    .socials__link {
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: relative;
+    }
+    .socials__icon {
+      fill: currentColor;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 }
 
 .socials__item {
