--- a/src/styles/blocks/scroll-down-btn.pcss
+++ b/src/styles/blocks/scroll-down-btn.pcss
@@ -15,4 +15,9 @@
     height: 13px;
     margin-left: 15px;
   }
+
+  &:focus {
+    outline: none;
+    text-shadow: 0px 0px 2px currentColor;
+  }
 }
