--- a/src/styles/blocks/round-btn.pcss
+++ b/src/styles/blocks/round-btn.pcss
@@ -4,6 +4,10 @@
   border-radius: 50%;
   border: 2px solid #464E62;
   background: svg-load('arrow-down.svg', fill=#464E62, width=10px, height=18px) center center no-repeat;
+  transition: 0.3s;
+  &:hover, &:focus {
+    opacity: 0.5;
+  }
 }
 
 .round-btn--pointer--left {
