--- a/src/styles/blocks/square-btns.pcss
+++ b/src/styles/blocks/square-btns.pcss
@@ -11,7 +11,15 @@
     width: 7px;
     top: 50%;
     left: 50%;
-    background: svg-load('arrow-down.svg', fill=#fff, width=100%, height=100%) center center no-repeat;
+    background: svg-load('arrow-down.svg', fill=#717883, width=100%, height=100%) center center no-repeat;
+  }
+
+  &:hover, &:focus {
+    outline: none;
+
+    &::before {
+      background: svg-load('arrow-down.svg', fill=#464E62, width=100%, height=100%) center center no-repeat;
+    }
   }
 
   &--next {
