--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -1,8 +1,10 @@
 .reviews {
-  background: url('~images/content/reviews-bg.jpg') bottom 70% right/cover no-repeat;
+  background: url('~images/content/reviews-bg.jpg') bottom 78% right/cover no-repeat;
 }
 
 .reviews__container {
-  padding-top: 200px;
-  padding-bottom: 200px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 810px;
 }
