--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -1,10 +1,12 @@
 
 .slider__header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding-right: 41%;
   margin-bottom: 77px;
+}
+
+.slider__title {
+  margin-right: 115px;
 }
 
 .slider__btns {
@@ -16,7 +18,7 @@
 .slider__content {
   display: flex;
   justify-content: space-around;
-  padding-right: 6%;
+  padding-right: 32%;
 }
 
 .slider__item {
