--- a/src/styles/blocks/square-btns.pcss
+++ b/src/styles/blocks/square-btns.pcss
@@ -1,6 +1,6 @@
 .square-btns__item {
-  width: 35px;
-  height: 35px;
+  width: 53px;
+  height: 53px;
   background: #333C49;
   position: relative;
 
@@ -14,8 +14,7 @@
     background: svg-load('arrow-down.svg', fill=#717883, width=100%, height=100%) center center no-repeat;
   }
 
-  &:hover, &:focus {
-    outline: none;
+  &:hover, &:active {
 
     &::before {
       background: svg-load('arrow-down.svg', fill=#464E62, width=100%, height=100%) center center no-repeat;
