--- a/src/styles/blocks/values.pcss
+++ b/src/styles/blocks/values.pcss
@@ -1,23 +1,28 @@
 .values {
-  background: url(~images/content/backpack-1200.png) center left no-repeat;
+  background: url(~images/content/backpack-1200.png) left 2% center no-repeat;
 }
 
 .values__container {
-  padding-top: 80px;
-  padding-bottom: 290px;
+  padding-top: 145px;
+  padding-bottom: 345px;
+}
+
+.values__title-wrapper {
+  display: flex;
+  justify-content: center;
 }
 
 .values__title {
-  margin: 0 auto;
-  width: 55%;
-  margin-bottom: 94px;
+  width: 40%;
+  margin-bottom: 80px;
+  margin-left: 9%;
 }
 
 .values__title-text {
   color: $text-color;
   font-weight: bold;
   font-size: 30px;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
 }
 
 .values__content {
@@ -27,6 +32,6 @@
 }
 
 .values__widget {
-  padding-left: 30.5%;
+  padding-left: 43%;
 }
 
