--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 50px 0 20px;
+  align-items: center;
+  padding: 40px 0 30px;
 }
 
 .hero__bottom-buttons {
@@ -14,4 +15,5 @@
 .hero__center-content {
   display: flex;
   justify-content: center;
+  width: 30%;
 }
