--- a/src/styles/blocks/userinfo.pcss
+++ b/src/styles/blocks/userinfo.pcss
@@ -1,20 +1,28 @@
 .userinfo {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  /* 1200 - flex-direction: row; */
 }
 
 .userinfo__title {
   font-size: 18px;
   font-weight: 600;
   color: rgba(70, 78, 98, 0.5);
-  text-align: right;
-  margin-right: 34px;
-  padding-top: 10px;
+  text-align: center;
+  margin-bottom: 22px;
+
+  /* padding-top: 10px; - 1200 
+  margin-right: 34px; 
+  text-align: right;*/
 }
 
 .userinfo__name {
   font-weight: 800;
   font-size: 72px;
-  flex-basis: 500px;
-  line-height: 1;
+  text-align: center;
+  /* flex-basis: 500px; */
+  line-height: 0.9;
 }
