--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -30,7 +30,8 @@ body {
   margin: 0 auto;
   /* max-width: 1480px;
   width: 95%; */
-  width: 1080px;
+  width: 95%;
+  max-width: 1500px;
 
   /* @include phones {
     width: 85%;
