--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -1,5 +1,9 @@
 .reviews {
-  background: url('~images/content/reviews-bg.jpg') bottom 78% right/cover no-repeat;
+  background: url('~images/content/reviews-bg-1800.jpg') bottom 78% right/cover no-repeat;
+
+  @include desktop {
+    background: url('~images/content/reviews-bg-1200.jpg') bottom 78% right/cover no-repeat;
+  }
 }
 
 .reviews__container {
