--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -1,6 +1,10 @@
 .skills__item {
   margin-bottom: 50px;
 
+  @include desktop {
+    margin-bottom: 67px;
+  }
+
   &:last-child {
     margin-bottom: 0;
   }
