--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -7,6 +7,10 @@
 
 .slider__title {
   margin-right: 115px;
+
+  @include desktop {
+    margin-right: 155px;
+  }
 }
 
 .slider__btns {
@@ -19,6 +23,10 @@
   display: flex;
   justify-content: space-around;
   padding-right: 32%;
+
+  @include desktop {
+    padding-right: 9%;
+  }
 }
 
 .slider__item {
