--- a/src/styles/blocks/square-btns.pcss
+++ b/src/styles/blocks/square-btns.pcss
@@ -4,6 +4,11 @@
   background: #333C49;
   position: relative;
 
+  @include desktop {
+    width: 40px;
+    height: 40px;
+  }
+
   &::before {
     content: '';
     position: absolute;
