--- a/src/styles/blocks/welcome-section.pcss
+++ b/src/styles/blocks/welcome-section.pcss
@@ -2,5 +2,9 @@
   /* background: url('~images/content/hero-bg.jpg') center top -100px / cover no-repeat; */
   background: url('~images/content/hero-bg.jpg') center top / cover no-repeat;
   padding-bottom: 130px;
+
+  @include desktop {
+    padding-bottom: 300px;
+  }
 }
 
