--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -3,12 +3,21 @@
   align-items: center;
   justify-content: center;
   min-height: 680px;
-  /* padding-top: 400px; */
+  
+  @include desktop {
+    justify-content: flex-start;
+    padding-top: 375px;
+  }
 }
 
 .about__user {
   width: 23%;
-  margin-right: 80px;
+  margin-right: 6%;
+
+  @include desktop {
+    width: 31%;
+    margin-right: 10%;
+  }
 }
 
 .about__content {
