--- a/src/styles/blocks/middle-section.pcss
+++ b/src/styles/blocks/middle-section.pcss
@@ -1,6 +1,10 @@
 .middle-section{
   position: relative;
   padding-bottom: 100px;
+
+  @include desktop {
+    padding-bottom: 50px;
+  }
 }
 
 .middle-section__triangles-top {
