--- a/src/styles/blocks/quote.pcss
+++ b/src/styles/blocks/quote.pcss
@@ -1,3 +1,10 @@
+.quote {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .quote__text {
   font-weight: 600;
   font-size: 16px;
