--- a/src/styles/blocks/userinfo.pcss
+++ b/src/styles/blocks/userinfo.pcss
@@ -4,7 +4,10 @@
   flex-direction: column;
   align-items: center;
 
-  /* 1200 - flex-direction: row; */
+  @include desktop {
+    flex-direction: row;
+    align-items: flex-start;
+  }
 }
 
 .userinfo__title {
@@ -14,15 +17,22 @@
   text-align: center;
   margin-bottom: 22px;
 
-  /* padding-top: 10px; - 1200 
-  margin-right: 34px; 
-  text-align: right;*/
+  @include desktop {
+    padding-top: 10px; 
+    margin-right: 34px; 
+    margin-bottom: 0;
+    text-align: right;
+  }
 }
 
 .userinfo__name {
   font-weight: 800;
   font-size: 72px;
   text-align: center;
-  /* flex-basis: 500px; */
   line-height: 0.9;
+
+  @include desktop {
+    flex-basis: 500px;
+    text-align: left;
+  }
 }
