--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -8,6 +8,11 @@
     justify-content: flex-start;
     padding-top: 375px;
   }
+
+  @include tablets {
+    align-items: start;
+    padding-top: 135px;
+  }
 }
 
 .about__user {
@@ -18,23 +23,40 @@
     width: 31%;
     margin-right: 10%;
   }
+
+  @include tablets {
+    width: 34%;
+    margin-right: 12%;
+  }
 }
 
 .about__content {
   flex: 1;
   max-width: 40%;
+
+  @include tablets {
+    max-width: 50%;
+  }
 }
 
 .about__desc {
   font-weight: 600;
   color: rgba(70, 78, 98, 0.8);
   margin-bottom: 20px;
+
+  @include tablets {
+    margin-bottom: 10px;
+  }
 }
 
 .about__title {
   font-weight: 700;
   font-size: 36px;
   margin-bottom: 16px;
+
+  @include tablets {
+    margin-bottom: 35px;
+  }
 }
 
 .about__text-info {
@@ -42,6 +64,10 @@
   color: rgba(70, 78, 98, 0.8);
   margin-bottom: 98px;
   line-height: 1.8;
+
+  @include tablets {
+    margin-bottom: 40px;
+  }
 }
 
 
