--- a/src/styles/blocks/skills-row.pcss
+++ b/src/styles/blocks/skills-row.pcss
@@ -2,16 +2,32 @@
   font-weight: bold;
   font-size: 24px;
   margin-bottom: 35px;
+
+  @include tablets {
+    text-align: center;  
+  } 
 }
 
 .skills-row__list {
   display: flex;
+
+  @include tablets {
+    justify-content: center;  
+  } 
 }
 
 .skills-row__item {
-  margin-right: 15%;
+  margin-right: 11%;
 
   &:last-child {
     margin-right: 0;
   }
+
+  @include desktop {
+    margin-right: 10%;
+  } 
+
+  @include tablets {
+    margin-right: 5%;
+  } 
 }
