--- a/src/styles/blocks/text-quote.pcss
+++ b/src/styles/blocks/text-quote.pcss
@@ -1,6 +1,10 @@
 .text-quote__text {
   color: rgba(255, 255, 255, 0.45);
   line-height: 1.85;
+
+  @include tablets {
+    margin-bottom: 20px;
+  }
 }
 
 .text-quote__author {
