--- a/src/styles/blocks/userinfo.pcss
+++ b/src/styles/blocks/userinfo.pcss
@@ -8,6 +8,11 @@
     flex-direction: row;
     align-items: flex-start;
   }
+
+  @include tablets {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .userinfo__title {
@@ -23,6 +28,13 @@
     margin-bottom: 0;
     text-align: right;
   }
+
+  @include tablets {
+    text-align: center;
+    margin-bottom: 40px;
+    margin-right: 0;
+    padding: 0;
+  }
 }
 
 .userinfo__name {
@@ -34,5 +46,9 @@
   @include desktop {
     flex-basis: 500px;
     text-align: left;
+  }
+
+  @include tablets {
+    text-align: center;
   }
 }
