--- a/src/styles/blocks/skill.pcss
+++ b/src/styles/blocks/skill.pcss
@@ -2,6 +2,11 @@
   position: relative;
   width: 140px;
   height: 140px;
+
+  @include desktop {
+    width: 130px;
+    height: 130px;
+  }
 }
 
 .skill__circle {
