--- a/src/styles/blocks/text-quote.pcss
+++ b/src/styles/blocks/text-quote.pcss
@@ -5,6 +5,10 @@
   @include tablets {
     margin-bottom: 20px;
   }
+
+  @include phones {
+    margin-bottom: 40px;
+  }
 }
 
 .text-quote__author {
