--- a/src/styles/blocks/welcome-section.pcss
+++ b/src/styles/blocks/welcome-section.pcss
@@ -10,5 +10,10 @@
   @include tablets {
     padding-bottom: 0;
   }
+
+  @include phones {
+    background: url('~images/content/hero-bg-phone.jpg') center top / cover no-repeat;
+    padding-bottom: 160px;
+  }
 }
 
