--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -1,8 +1,19 @@
+.works__container {
+  @include phones {
+    width: 100%;
+  }
+}
+
 .works__title {
   margin-bottom: 82px;
 
   @include tablets {
     margin-bottom: 50px;
+  }
+
+  @include phones {
+    text-align: center;
+    margin-bottom: 27px;
   }
 }
 
