--- a/src/index.pug
+++ b/src/index.pug
@@ -73,58 +73,13 @@ block content
             .values__content 
               p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
         .values__widget
-
-          -
-            var skillsCategories = [
-              ["Front-end", ["HTML",'CSS','JavaScript','jQuery и Vue.js']],
-              ['Workflow', ['Git','Terminal','Gulp','Webpack']]
-            ]
-
-          ul.skills.values__skills
-            each category in skillsCategories 
-              li.skills__item
-                .skills-row
-                  h4.skills-row__title #{category[0]}
-                  ul.skills-row__list
-                    each skill in category[1]
-                      li.skills-row__item
-                        .skill
-                          svg(viewBox='0 0 100 100').skill__circle-shape
-                            circle(cx='50' cy='50' r='45').skill__circle.skill__circle--layer--under
-                            circle(cx='50' cy='50' r='45' stroke='url(#gradient)' transform='rotate(180 50 50)').skill__circle.skill__circle--layer--above
-                            linearGradient(id='gradient' x1='0%' y1='0%' x2='100%' y2='0%')
-                              stop(offset='0%' stop-color='#7C00EA')
-                              stop(offset='100%' stop-color='#4A00ED')
-                          .skill__title #{skill}
+          .values__widget-container
+            #skills-component
     section.works
-      .container
+      .container.works__container
         h2.section-title.works__title Мои работы
         .works__content
-          .works-preview
-            .works-preview__pictures(data-slide='2')
-              +image('content/slider-1.jpg', 'works-preview__img')
-              .works-preview__thumbs
-                ul.thumbs
-                  - for (var i = 4; i > 0; i--)
-                    li.thumbs__item
-                      a(href='#').thumbs__link
-                        +image(`content/slider-${i}.jpg`, 'thumb')
-              .works-preview__btns
-                .square-btns
-                  button(type='button').square-btns__item.square-btns__item--next
-                  button(type='button').square-btns__item.square-btns__item--prev
-
-            .works-preview__info
-              - var tags = ['HTML', 'CSS', 'JavaScript']
-              ul.tags.works-preview__tags
-                each item in tags 
-                  li.tags__item
-                    .tag #{item}
-              
-              .works-preview__title Сайт школы образования
-              .works-preview__desc 
-                p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-              a(href='#').iconed-link Посмотреть сайт
+          #preview-component
     .triangles.middle-section__triangles-bottom.triangles--pointed-down
       svg(viewBox='0 0 1000 100' preserveAspectRatio='none').triangles__shape.triangles__shape--position--left
         polygon(points='0,0 0,100 1000,100')
@@ -132,37 +87,7 @@ block content
         polygon(points='0,100 1000,100 1000,0')
   section.reviews
     .container.reviews__container
-      .slider
-        .slider__header
-          .section-title.slider__title Что обо мне говорят
-          .slider__btns
-            button(type='button').round-btn.round-btn--pointer--left
-            button(type='button').round-btn.round-btn--pointer--right
-        ul.slider__content
-          li.slider__item
-            .quote
-              .quote__text
-                p Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
-              .quote__user
-                .user-display
-                  .user-display__avatar
-                    .user-display__avatar-style
-                      +image('content/review-2.jpg', 'user-display__pic')
-                  .user-display__data
-                    .user-display__name Ковальчук Дмитрий
-                    .user-display__occ Основатель Loftschool
-          li.slider__item
-            .quote
-              .quote__text
-                p Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах
-              .quote__user
-                .user-display
-                  .user-display__avatar
-                    .user-display__avatar-style
-                      +image('content/review-1.jpg', 'user-display__pic')
-                  .user-display__data
-                    .user-display__name Владимир Сабанцев
-                    .user-display__occ Преподаватель
+      #slider-component
   footer.footer
     .container.footer__container
       .footer__copyright
