--- a/src/styles/blocks/hamburger.pcss
+++ b/src/styles/blocks/hamburger.pcss
@@ -11,6 +11,10 @@
     left: 57%;
     z-index: 150;
     background: #fff;
+
+    @include phones {
+      left: 0;
+    }
   }
 }
 
@@ -18,6 +22,11 @@
   position: fixed;
   top: 75px;
   right: 26px;
+
+  @include phones {
+    top: 38px;
+    right: 38px;
+  }
 }
 
 .hamburger__close-icon {
@@ -32,6 +41,12 @@
   font-size: 18px;
   margin-bottom: 120px;
   font-weight: 600;
+
+  @include phones {
+    padding-left: 55px;
+    padding-top: 195px;
+    margin-bottom: 140px;
+  }
 }
 
 .hamburger__socials-list {
