--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -7,6 +7,11 @@
   @include tablets {
     margin-bottom: 55px;
   }
+
+  @include phones {
+    flex-direction: column;
+    margin-bottom: 68px;
+  }
 }
 
 .slider__title {
@@ -19,6 +24,11 @@
   @include tablets {
     margin-right: 30px;
   }
+
+  @include phones {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
 }
 
 .slider__btns {
@@ -27,10 +37,55 @@
   justify-content: space-between;
 }
 
-.slider__content {
-  display: flex;
-  justify-content: space-around;
-  padding-right: 32%;
+
+// overwrite swiper styles 
+
+
+
+.swiper-slide-active {
+  width: 28% !important;
+  margin-right: 12% !important;
+  padding-left: 6% !important;
+
+  @include desktop {
+    width: 37%!important;
+    margin-right: 16%!important;
+    padding-left: 9%!important;
+  }
+
+  @include tablets {
+    width: 48%!important;
+    margin-right: 9%!important;
+    padding-left: 7%!important;
+  }
+
+  @include phones {
+      width: 100% !important;
+      margin-right: 0 !important;
+      padding-left: 2% !important;
+  }
+}
+
+.swiper-slide-next {
+  width: 28% !important;
+  margin-right: 50% !important;
+
+  @include tablets {
+    width: 48% !important;
+  }
+
+  @include phones {
+    /* width: unset !important;
+    margin-right: unset !important; */
+  }
+}
+
+
+
+
+/* .slider__content {
+  padding-left: 6%;
+
 
   @include desktop {
     padding-right: 9%;
@@ -42,7 +97,12 @@
   }
 }
 
-.slider__item {
+.slider__quote {
+  width: 56%;
+} */
+
+
+/* .slider__item {
   width: 32%;
 
   @include tablets {
@@ -53,5 +113,5 @@
       margin-right: 0;
     }
   }
-}
+}  */
 
