--- a/src/styles/blocks/user-display.pcss
+++ b/src/styles/blocks/user-display.pcss
@@ -1,5 +1,9 @@
 .user-display__avatar {
   margin-right: 30px;
+
+  @include phones {
+    margin-right: 15px;
+  }
 }
 
 .user-display__avatar-style {
