--- a/src/styles/blocks/userinfo.pcss
+++ b/src/styles/blocks/userinfo.pcss
@@ -35,6 +35,10 @@
     margin-right: 0;
     padding: 0;
   }
+
+  @include phones {
+    font-size: 1rem;
+  }
 }
 
 .userinfo__name {
@@ -49,6 +53,12 @@
   }
 
   @include tablets {
+    width: 75%;
     text-align: center;
+  }
+
+  @include phones {
+    flex-basis: unset;
+    font-size: 36Px;
   }
 }
