исправлена проблема  с размерами элементов thumbs

--- a/src/styles/blocks/values.pcss
+++ b/src/styles/blocks/values.pcss
@@ -4,6 +4,7 @@
 
   @include desktop {
     background-image:  url(~images/content/backpack-1200.png);
+    background-position: left center;
   }
 
   @include tablets {
