--- a/src/styles/blocks/works-preview.pcss
+++ b/src/styles/blocks/works-preview.pcss
@@ -12,7 +12,7 @@
 .works-preview__pictures {
   width: 65%;
   position: relative;
-  height: 550px;
+  max-height: 550px;
 
   &::before {
     position: absolute;
@@ -29,7 +29,7 @@
 
   @include desktop {
     width: 57%;
-    height: unset;
+    max-height: 360px;
 
     &::before {
       font-size: 310px;
@@ -75,6 +75,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: top;
 }
 
 .works-preview__btns {
