исправлены замечания наставника по адаптиву (слайдер works, секция hero)

--- a/src/templates/components/works.pug
+++ b/src/templates/components/works.pug
@@ -13,7 +13,8 @@ script(type="text/x-template")#preview-container
 
 script(type="text/x-template")#preview-display
    .works-preview__pictures(:data-slide='currentWork.id')
-      img(:src="currentWork.photo").works-preview__img
+      .works-preview__img-wrapper
+        img(:src="currentWork.photo").works-preview__img
       .works-preview__thumbs
         thumbs(
           :works="reversedWorks"
