--- a/src/styles/blocks/works-preview.pcss
+++ b/src/styles/blocks/works-preview.pcss
@@ -12,7 +12,7 @@
 .works-preview__pictures {
   width: 65%;
   position: relative;
-  max-height: 550px;
+  height: fit-content;
 
   &::before {
     position: absolute;
@@ -29,7 +29,6 @@
 
   @include desktop {
     width: 57%;
-    max-height: 360px;
 
     &::before {
       font-size: 310px;
@@ -41,7 +40,6 @@
     align-self: start;
     width: 92%;
     margin-bottom: 60px;
-    height: 360Px; 
 
     &::before {
       font-size: 300Px;
@@ -52,7 +50,6 @@
   @include phones {
     width: 100%;
     margin-bottom: 67px;
-    height: 32vh;
 
     &::before {
       display: none;
@@ -68,6 +65,26 @@
 
   @include phones {
     display: none;
+  }
+}
+
+
+.works-preview__img-wrapper {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  max-height: 550px;
+  
+  @include desktop {
+    max-height: 360px;
+  }
+
+  @include tablets {
+    height: 360Px; 
+  }
+
+  @include phones {
+    height: 32vh;
   }
 }
 
