--- a/src/admin/app.pcss
+++ b/src/admin/app.pcss
@@ -1,6 +1,6 @@
 
 .app-container {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column
 }
@@ -13,13 +13,22 @@
 
 .header {
   display: flex;
+  margin-bottom: 50px;
 }
-
-
 
 .title {
   font-weight: bold;
   font-size: 21px;
   color: $text-color;
   margin-right: 60px;
+}
+
+.skills {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item {
+  width: calc(100% / 2 - 30px);
+  margin-right: 30px;
 }
