--- a/src/admin/components/input/input.pcss
+++ b/src/admin/components/input/input.pcss
@@ -74,7 +74,7 @@
 }
 
 .title {
-  color: rgba(65, 76, 99, 0.5);
+  color: rgba(55, 62, 66, 0.6);
   font-weight: 600;
   opacity: 0.5;
 }
@@ -94,6 +94,7 @@
   padding: 10px 8%;
   border: none;
   border-bottom: 1px solid #1f232d;
+  color: #414C63;
 
   &::placeholder {
     color: rgba(55, 62, 66, 0.25);
