добавлен роутинг страниц админ-панели

--- a/src/admin/components/navigation/navigation.pcss
+++ b/src/admin/components/navigation/navigation.pcss
@@ -15,10 +15,8 @@
     color: #383BCF;
     border-color: #383BCF;
   }
-}
 
-.item.active {
-  .link {
+  &.active {
     color: #383BCF;
     border-color: #383BCF;
   }
