--- a/src/admin/pages/works/works.pcss
+++ b/src/admin/pages/works/works.pcss
@@ -5,8 +5,9 @@
 }
 
 .item {
-  width: calc(100% / 3 - 20px);
-  margin-left: 20px;
+  width: calc(100% / 3 - 28px);
+  margin-left: 28px;
+  margin-bottom: 28px;
 }
 
 .form {
